# ComfyUI-TJ_NODE_STUDIO_ONE

./: .gitignore  CHANGELOG.md  PROMO.md  README.md  SETUP_GUIDE.md  __init__.py  config_klein.json  config_krea2.json  config_qwen2511.json  config_sdxl_one.json  config_zimage.json  install_requirements.bat  install_requirements.sh  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ComfyUI_workflows_sample/: TJ_NODE_STUDIO_COLLECTION.json
web/: one_node_flux_2_klein.js  one_node_krea2.js  one_node_qwen2511.js  one_node_sdxl.js  one_node_z_image_turbo.js
web/klein/: api_klein.js  core_klein.js  graph_builder_klein.js  one_node_flux_2_klein.js  ui_app_settings_klein.js  ui_common.js  ui_edit_klein.js  ui_faceswap_klein.js  ui_gallery_klein.js  ui_i2i_klein.js  ui_image_upload.js  ui_inpaint_klein.js  ui_lora_section.js  ui_prompt_templates.js  ui_t2i_klein.js  ui_upscale_klein.js
web/krea2/: api_krea2.js  core_krea2.js  graph_builder_krea2.js  ui_app_settings_krea2.js  ui_controlnet_krea2.js  ui_gallery_krea2.js  ui_i2i_krea2.js  ui_identity_krea2.js  ui_t2i_krea2.js  ui_upscale_krea2.js
web/qwen2511/: api_qwen2511.js  core_qwen2511.js  graph_builder_qwen2511.js  ui_angle_qe.js  ui_app_settings_qe.js  ui_common_qe.js  ui_edit_qe.js  ui_faceswap_qe.js  ui_gallery_qe.js  ui_gallery_qe2511.js  ui_i2i_qe.js  ui_inpaint_qe.js  ui_t2i_qe.js  ui_upscale_qe.js
web/sdxl/: api_sdxl.js  core_sdxl.js  graph_builder_sdxl.js  one_node_sdxl.js  ui_app_settings_sdxl.js  ui_gallery_sdxl.js  ui_i2i_sdxl.js  ui_inpaint_sdxl.js  ui_lora_sdxl.js  (+3 more)
(+25 files in other folders)
